# simple_semgrepAI

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  logging.yml  main.py  pyproject.toml  requirements.txt  semgrepai.yml
semgrepai/: __init__.py  __main__.py  cache.py  cli.py  config.py  logging.py  metrics.py  parallel.py  rag.py  reporter.py  scanner.py  validator.py
semgrepai/analyzers/: code_analyzer.py
semgrepai/api/: __init__.py  main.py
semgrepai/api/db/: __init__.py  session.py
semgrepai/api/models/: __init__.py  finding.py  scan.py
semgrepai/api/routes/: __init__.py  findings.py  scans.py  stats.py  websocket.py
semgrepai/api/schemas/: __init__.py  common.py  finding.py  scan.py
semgrepai/api/services/: __init__.py  scan_service.py
semgrepai/async_utils/: __init__.py  progress.py  rate_limiter.py
semgrepai/llm/: __init__.py  providers.py
semgrepai/rules/: common_vulnerabilities.yml
semgrepai/templates/: report.html
semgrepai/web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
semgrepai/web/frontend/src/: App.tsx  index.css
semgrepai/web/frontend/src/api/: client.ts
semgrepai/web/frontend/src/components/Finding/: AIValidationSection.tsx  CodeSection.tsx  FieldGroup.tsx  FindingDetailPanel.tsx  ImpactGrid.tsx  ListSection.tsx  MetadataGrid.tsx  index.ts
semgrepai/web/frontend/src/components/Layout/: MainLayout.tsx
semgrepai/web/frontend/src/hooks/: useFindings.ts  useScans.ts  useStats.ts  useWebSocket.ts
semgrepai/web/frontend/src/pages/: Dashboard.tsx  ScanDetail.tsx  Scans.tsx
semgrepai/web/frontend/src/types/: index.ts
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_cli_scan_workflow.py  test_web_api.py
tests/fixtures/sample_code/python/: safe_code.py  sql_injection.py  xss_vulnerable.py
tests/integration/: test_full_scan.py  test_validator_real_llm.py
tests/unit/: test_cache.py  test_config.py
